--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -9,3 +9,4 @@ append content
       h1 Login
       a.button.login.google(href="/auth/google") Login with Google
       a.button.login.facebook(href="/auth/facebook") Login with Facebook
+      a.button.login.line(href="/auth/line") Login with Line
