add GitHub login

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -10,3 +10,4 @@ append content
       a.button.login.google(href="/auth/google") Login with Google
       a.button.login.facebook(href="/auth/facebook") Login with Facebook
       a.button.login.line(href="/auth/line") Login with Line
+      a.button.login.github(href="/auth/github") Login with GitHub
