--- a/src/views/app/main.pug
+++ b/src/views/app/main.pug
@@ -8,3 +8,5 @@ append content
   .card.flex.to-col.center-y.profile.margin-auto
     img.profile-picture(src=user.picture alt="profile picture")
     h2 #{user.firstName} #{user.lastName}
+    if user.email
+      p #{user.email}
